<resources>
    <string name="app_name">ScaleMate - Weight Tracker</string>
    <string name="signin_button">Sign In</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="menu_history">Weight History</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_record">Add Weight</string>
    <string name="menu_view_goal">Goal Weight</string>
    <string name="menu_settings">Settings</string>
    <string name="home_title">Home</string>
    <string name="view_goal_title">View/Edit Goal</string>
    <string name="history_title">Weight History</string>
    <string name="add_record_title">Add New Weight</string>
    <string name="target_weight">150</string>
    <string name="edit_weight">Enter new goal weight:</string>
    <string name="submit_button">Submit</string>
    <string name="current_goal">Goal Weight:</string>
    <string name="date_header">Date:</string>
    <string name="weight_header">Weight:</string>
    <string name="delete_item">Delete?</string>
    <string name="demo_date">04/09/23</string>
    <string name="demo_weight">180 lbs</string>
    <string name="permissions">Permissions Settings</string>
    <string name="push_permissions">Enable push notifications?</string>
    <string name="record_add">Select date and add your weight below.</string>
    <string name="current_weight">Current Weight:</string>
    <string name="current_weight_value">200</string>
</resources>