<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGoalWeight"
    android:background="@drawable/gradient_background">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/title_bar"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/header_target"
        style="@style/listItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_goal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="100dp"/>

    <TextView
        android:id="@+id/current_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_weight"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="170dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_weight"
        android:text="@string/edit_weight"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="90dp"/>
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:id="@+id/edit_goal"
        android:inputType="number"
        android:textSize="50sp"
        android:hint="@string/target_weight"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="170dp"/>
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:id="@+id/edit_weight_button"
        android:backgroundTint="#68b7bc"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="170dp"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/home_button"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/white"
        android:onClick="onClickHome"
        android:text="@string/menu_home"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/history"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickHistory"
        android:text="@string/menu_history"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/add_weight"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickAddRecord"
        android:text="@string/menu_add_record"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/goal_button"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickWeightGoal"
        android:text="@string/menu_view_goal"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/black"
        android:onClick="onClickSettings"
        android:text="@string/menu_settings"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

</RelativeLayout>