<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWeight"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_header"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:id="@+id/date_header"
        android:paddingBottom="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:paddingBottom="20dp"
        android:id="@+id/weight_header"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/add_date"
        android:hint="Select Date"
        android:onClick="showDatePicker"
        android:autofillHints="none"
        android:clickable="true"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
        android:paddingBottom="20dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/enter_weight"
        android:hint="210 lbs"
        android:autofillHints="none"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="110dp"
        android:paddingBottom="20dp"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:text="@string/submit_button"
        android:backgroundTint="@color/buttonBackround"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="200dp"
        android:onClick="addWeight"
        />
    <Button
        android:id="@+id/home_button"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/white"
        android:onClick="onClickHome"
        android:text="@string/menu_home"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/history"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickHistory"
        android:text="@string/menu_history"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/add_weight"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickAddRecord"
        android:text="@string/menu_add_record"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/goal_button"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickWeightGoal"
        android:text="@string/menu_view_goal"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/black"
        android:onClick="onClickSettings"
        android:text="@string/menu_settings"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

</RelativeLayout>