<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity"
    android:id="@+id/main_layout"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/title_bar"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="Welcome to ScaleMate!"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/listItemDescription"
        android:text="@string/current_goal"
        android:id="@+id/current_target"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/target_weight_value"
        android:textSize="45sp"
        android:textAlignment="center"
        android:text="@string/target_weight"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toBottomOf="@id/current_target"
        app:layout_constraintLeft_toLeftOf="@id/current_target"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_weight_text"
        android:text="@string/current_weight"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="290dp"
        app:layout_constraintTop_toBottomOf="@id/target_weight_value"
        app:layout_constraintLeft_toLeftOf="@id/target_weight_value"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_weight_value"
        android:textSize="45sp"
        android:textAlignment="center"
        android:text="@string/current_weight_value"
        android:layout_marginTop="320dp"
        app:layout_constraintTop_toBottomOf="@id/current_weight_text"
        app:layout_constraintLeft_toLeftOf="@id/current_weight_text"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/main_view"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content1"
        app:layout_constraintTop_toBottomOf="@id/main_view"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content2"
        app:layout_constraintTop_toBottomOf="@id/content1"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content3"
        app:layout_constraintTop_toBottomOf="@id/content2"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content4"
        app:layout_constraintTop_toBottomOf="@id/content3"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content5"
        app:layout_constraintTop_toBottomOf="@id/content4"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content6"
        app:layout_constraintTop_toBottomOf="@id/content5"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content7"
        app:layout_constraintTop_toBottomOf="@id/content6"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content8"
        app:layout_constraintTop_toBottomOf="@id/content7"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content9"
        app:layout_constraintTop_toBottomOf="@id/content8"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content10"
        app:layout_constraintTop_toBottomOf="@id/content9"
        />

    <Button
        android:id="@+id/home_button"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/white"
        android:onClick="onClickHome"
        android:text="@string/menu_home"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/history"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickHistory"
        android:text="@string/menu_history"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/add_weight"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickAddRecord"
        android:text="@string/menu_add_record"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/goal_button"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickWeightGoal"
        android:text="@string/menu_view_goal"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/black"
        android:onClick="onClickSettings"
        android:text="@string/menu_settings"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

</RelativeLayout>