<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightHistory"
    android:background="@drawable/gradient_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/title_bar"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_header"
        android:id="@+id/date_header"
        android:textSize="30sp"
        android:textColor="@color/black"
        style="@style/listItemDescription"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_header"
        android:textSize="30sp"
        android:id="@+id/weight_header"
        android:textAlignment="center"
        android:textColor="@color/black"
        style="@style/listItemDescription"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="175dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight1"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="175dp"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box1"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toBottomOf="@id/date_header"
        app:layout_constraintLeft_toRightOf="@id/weight1"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date2"
        app:layout_constraintTop_toBottomOf="@id/date1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight2"
        app:layout_constraintTop_toBottomOf="@id/date1"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box2"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="215dp"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date3"
        app:layout_constraintTop_toBottomOf="@id/date2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight3"
        app:layout_constraintTop_toBottomOf="@id/date2"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box3"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box3"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="255dp"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date4"
        app:layout_constraintTop_toBottomOf="@id/date3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight4"
        app:layout_constraintTop_toBottomOf="@id/date3"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box4"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/date3"
        app:layout_constraintLeft_toRightOf="@id/weight2"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date5"
        app:layout_constraintTop_toBottomOf="@id/date4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight5"
        app:layout_constraintTop_toBottomOf="@id/date4"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box5"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/date4"
        app:layout_constraintLeft_toRightOf="@id/weight2"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date6"
        app:layout_constraintTop_toBottomOf="@id/date5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight6"
        app:layout_constraintTop_toBottomOf="@id/date5"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box6"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/date5"
        app:layout_constraintLeft_toRightOf="@id/weight2"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date7"
        app:layout_constraintTop_toBottomOf="@id/date6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight7"
        app:layout_constraintTop_toBottomOf="@id/date6"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box7"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/date6"
        app:layout_constraintLeft_toRightOf="@id/weight2"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date8"
        app:layout_constraintTop_toBottomOf="@id/date7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight8"
        app:layout_constraintTop_toBottomOf="@id/date7"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box8"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/date7"
        app:layout_constraintLeft_toRightOf="@id/weight2"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date9"
        app:layout_constraintTop_toBottomOf="@id/date8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weight2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight9"
        app:layout_constraintTop_toBottomOf="@id/date8"
        app:layout_constraintLeft_toRightOf="@id/date2"
        app:layout_constraintRight_toLeftOf="@id/box2"
        android:paddingRight="20dp"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box9"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/date8"
        app:layout_constraintLeft_toRightOf="@id/weight2"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeleteEntry"
        android:textAllCaps="false"
        android:text="Delete"
        android:onClick="deleteWeights"
        android:backgroundTint="#68b7bc"
        android:textColor="@color/white"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="300dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttnLoadMore"
        android:text="Load More"
        android:textAllCaps="false"
        android:backgroundTint="#68b7bc"
        android:onClick="loadMoreWeights"
        android:enabled="false"
        android:textColor="@color/white"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="150dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEdit"
        android:text="Edit"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="#68b7bc"
        android:onClick="resetWeights"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/white"
        android:onClick="onClickHome"
        android:text="@string/menu_home"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/history"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickHistory"
        android:text="@string/menu_history"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp"/>

    <Button
        android:id="@+id/add_weight"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickAddRecord"
        android:text="@string/menu_add_record"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/goal_button"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/menuBackground"
        android:color="@color/white"
        android:onClick="onClickWeightGoal"
        android:text="@string/menu_view_goal"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="650dp"
        android:textSize="11sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:backgroundTint="#005b60"
        android:color="@color/black"
        android:onClick="onClickSettings"
        android:text="@string/menu_settings"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

</RelativeLayout>